Add popup in test keyboard - Cannot repro

--- a/dev_apps/test-keyboard-app/index.html
+++ b/dev_apps/test-keyboard-app/index.html
@@ -11,6 +11,7 @@
   <div id="keyboard">
     <button id="sendKey" class="key">Send Key: \o/ </button>
     <button id="switchLayout" class="key">Switch layout</button>
+    <button class="popup"> test </button>
   </div>
 </body>
 </html>
