copy #keyboard style -- cannot repro

--- a/dev_apps/test-keyboard-app/index.html
+++ b/dev_apps/test-keyboard-app/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <div id="keyboard">
-    <button id="sendKey" class="key">Send Key: \o/ </button>
+    <button id="sendKey" class="key">Send Key: \o/ 
+      <div class="popup"> t </div>
+    </button>
     <button id="switchLayout" class="key">Switch layout</button>
-    <button class="popup"> test </button>
   </div>
 </body>
 </html>
