add transparent background to the key

--- a/dev_apps/test-keyboard-app/index.html
+++ b/dev_apps/test-keyboard-app/index.html
@@ -10,7 +10,9 @@
 <body>
   <div id="keyboard">
     <button id="sendKey" class="key">Send Key: \o/ 
-      <div class="popup"> t </div>
+      <span class="visual-wrapper">
+        <span class="popup"> t </span>
+      </span>
     </button>
     <button id="switchLayout" class="key">Switch layout</button>
   </div>
